Bug 46531 - Funny behaviour of spellchecker dialog GUI
Summary: Funny behaviour of spellchecker dialog GUI
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard: target:3.6.0 target:3.5.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-23 11:09 UTC by Sergio Ortiz Rojas
Modified: 2012-04-05 08:08 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Screenshots of the bug report (632.11 KB, application/zip)
2012-02-23 11:11 UTC, Sergio Ortiz Rojas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Ortiz Rojas 2012-02-23 11:09:08 UTC
This bug is about the new feature of LibreOffice 3.5 that allows the inclusion of hyperlinks in grammar.xml files to explain better some grammar mistakes from an external website.

1. Install the attached extension.

[languagetool-reduced.oxt]

2. Open a new document in writer.
3. Select "Catalan" language  in Tools/Language/For all text/Catalan
4. Write the sentence (with intentioned mistakes):

Al mrtí l'home de la ombra va vingre i no me agafa per pooc.

5. Press F7 to start grammar/spell checking

[screenshot-1.png]

6. Press "ignore once"

[screenshot-2.png]

7. Press "ignore once"

[screenshot-3.png]

8. Press "ignore once"

[screenshot-4.png]

Please note that the dialog does not display the "More..." hyperlink in the yellow area above.

9. Press "ignore once"

[screenshot-5.png]

Please note that the dialog keep not displaying the "More..." hyperlink 

On the other hand, using this feature from the contextual menu over blue-underlined words works nicely. The problem seems that has to do with changes between spellchecking mistakes and grammar mistakes.
Comment 1 Sergio Ortiz Rojas 2012-02-23 11:11:16 UTC
Created attachment 57543 [details]
Screenshots of the bug report

Oops, the screenshots were missing ;)
Comment 2 Sergio Ortiz Rojas 2012-02-23 11:21:00 UTC
Sorry, I could not upload the file due to size limits. You can download the extension from here

http://dl.dropbox.com/u/853180/languagetool-reduced.oxt
Comment 3 Not Assigned 2012-02-27 08:04:50 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=adf45eced404c33be6db884a3e809725e7975872

fdo#46531: Fixed SpellCheck dialog display issues
Comment 4 Cédric Bosdonnat 2012-02-27 08:05:19 UTC
Fixed
Comment 5 Cédric Bosdonnat 2012-02-27 08:09:40 UTC
for testers: install the dict-ca.oxt as well to reproduce ;)
Comment 6 Not Assigned 2012-02-27 08:47:48 UTC
Cédric Bosdonnat committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2c65d4f30cddb0528e8e9ef24e3d42a68ada25c&g=libreoffice-3-5

fdo#46531: Fixed SpellCheck dialog display issues


It will be available in LibreOffice 3.5.2.
Comment 7 Rainer Bielefeld Retired 2012-04-05 08:08:08 UTC
I added Fix submitter as assignee because this will ease queries and bug tracking.