fdo#46531: Fixed SpellCheck dialog display issues

More robust, handling of the explanations message and link display.